# substrate-contracts-node

./: Cargo.toml
contracts/cluster_node_candidate_authorization/: Cargo.toml  lib.rs
contracts/upgradable_proxy_forwarding/: Cargo.toml  lib.rs
contracts/upgradable_set_code_hash/: Cargo.toml  lib.rs
pallets/cere-contracts/: Cargo.toml
pallets/cere-contracts/primitives/: Cargo.toml
pallets/cere-contracts/src/: exec.rs  lib.rs
pallets/template/: Cargo.toml
pallets/template/src/: lib.rs
primitives/: Cargo.toml
runtime/: Cargo.toml
runtime/src/: lib.rs
