[workspace]
resolver = "2"
members = [
    'node',
    'runtime',
    'pallets/cere-contracts',
    'pallets/cere-contracts/primitives',
]
exclude = [
    'contracts/upgradable_proxy_forwarding',
    'contracts/upgradable_set_code_hash',
    'contracts/cluster_node_candidate_authorization',
]

[profile.release]
panic = 'unwind'
