[package]
name = "pallet-cere-contracts"
version = "4.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
description = "FRAME pallet for WASM contracts"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
bitflags = "1.3"
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
	"derive",
	"max-encoded-len",
] }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
log = { version = "0.4", default-features = false }
wasm-instrument = { version = "0.4", default-features = false }
serde = { version = "1", optional = true, features = ["derive"] }
smallvec = { version = "1", default-features = false, features = [
	"const_generics",
] }
wasmi = { version = "0.20", default-features = false }
wasmparser = { package = "wasmparser-nostd", version = "0.91", default-features = false }
impl-trait-for-tuples = "0.2"

# Only used in benchmarking to generate random contract code
rand = { version = "0.8", optional = true, default-features = false }
rand_pcg = { version = "0.3", optional = true }

# Substrate Dependencies
frame-benchmarking = { git = "https://github.com/paritytech/substrate", package = "frame-benchmarking", default-features = false, branch = "polkadot-v0.9.37", optional = true }
frame-support = { git = "https://github.com/paritytech/substrate", package = "frame-support", default-features = false, branch = "polkadot-v0.9.37" }
frame-system = { git = "https://github.com/paritytech/substrate", package = "frame-system", default-features = false, branch = "polkadot-v0.9.37" }
# pallet-contracts-primitives = { git = "https://github.com/paritytech/substrate", package = "pallet-contracts-primitives", default-features = false, branch = "polkadot-v0.9.37" }
# pallet-contracts-proc-macro = { git = "https://github.com/paritytech/substrate", package = "pallet-contracts-proc-macro", default-features = false, branch = "polkadot-v0.9.37" }
sp-api = { git = "https://github.com/paritytech/substrate", package = "sp-api", default-features = false, branch = "polkadot-v0.9.37" }
sp-core = { git = "https://github.com/paritytech/substrate", package = "sp-core", default-features = false, branch = "polkadot-v0.9.37" }
sp-io = { git = "https://github.com/paritytech/substrate", package = "sp-io", default-features = false, branch = "polkadot-v0.9.37" }
sp-runtime = { git = "https://github.com/paritytech/substrate", package = "sp-runtime", default-features = false, branch = "polkadot-v0.9.37" }
sp-std = { git = "https://github.com/paritytech/substrate", package = "sp-std", default-features = false, branch = "polkadot-v0.9.37" }

# Local Dependencies
pallet-contracts-primitives = { path = "primitives", package = "pallet-cere-contracts-primitives", default-features = false}
pallet-contracts-proc-macro = { path = "proc-macro" }

[dev-dependencies]
array-bytes = "4.1"
assert_matches = "1"
env_logger = "0.9"
pretty_assertions = "1"
wat = "1"

# Substrate Dependencies
pallet-balances = { git = "https://github.com/paritytech/substrate", package = "pallet-balances", default-features = false, branch = "polkadot-v0.9.37" }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", package = "pallet-timestamp", default-features = false, branch = "polkadot-v0.9.37" }
pallet-randomness-collective-flip = { git = "https://github.com/paritytech/substrate", package = "pallet-randomness-collective-flip", default-features = false, branch = "polkadot-v0.9.37" }
pallet-utility = { git = "https://github.com/paritytech/substrate", package = "pallet-utility", default-features = false, branch = "polkadot-v0.9.37" }
sp-keystore = { git = "https://github.com/paritytech/substrate", package = "sp-keystore", default-features = false, branch = "polkadot-v0.9.37" }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"scale-info/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-io/std",
	"sp-std/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"wasm-instrument/std",
	"wasmi/std",
	"pallet-contracts-primitives/std",
	"pallet-contracts-proc-macro/full",
	"log/std",
	"rand/std",
	"wasmparser/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"rand",
	"rand_pcg",
]
try-runtime = ["frame-support/try-runtime"]
